--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,10 @@
-<p>
-  <label for="project_name">Name:</label>
-  <%= f.text_field :name %>
-</p>
+<% semantic_form_for @project do |form| %>
+  <% form.inputs do -%>
+    <% if form.object.new_record? -%>
+      <%= form.input :name %>
+      <%= form.input :framework, :as => :select, :collection => Project::FRAMEWORKS %>
+    <% end -%>
+    <%= form.input :users, :as => :check_boxes %>
+  <% end -%>
+  <%= form.buttons %>
+<% end -%>
