--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Project</h1>
+<h1>Edit Project</h1>
 <%= render :partial => 'form', :object => @project %>
 <br/>
 <%= link_to 'Back', collection_url %>
